when stop name wraps, prevent wrapping of time

--- a/apps/site/assets/css/_schedule-page.scss
+++ b/apps/site/assets/css/_schedule-page.scss
@@ -418,6 +418,8 @@
 
   &--right-adjusted {
     text-align: right;
+    vertical-align: top;
+    white-space: pre;
   }
 }
 
